--- a/scm/src/main/resources/application.properties
+++ b/scm/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #oauth2 client configurations
 #google configure
-spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-name=
 spring.security.oauth2.client.registration.google.client-id=
 spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope=email,profile
